# api/openapi/swagger.json
@@ -834,7 +834,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_manifest_transport_http.ManifestListResponse"
+                            "$ref": "#/definitions/http.ManifestListResponse"
                         }
                     },
                     "400": {
@@ -877,7 +877,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_manifest_transport_http.ManifestResponse"
+                            "$ref": "#/definitions/http.ManifestResponse"
                         }
                     },
                     "400": {
@@ -929,7 +929,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_manifest_transport_http.ManifestResponse"
+                            "$ref": "#/definitions/http.ManifestResponse"
                         }
                     },
                     "400": {
@@ -1013,7 +1013,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_manifest_transport_http.ManifestResourcesResponse"
+                            "$ref": "#/definitions/http.ManifestResourcesResponse"
                         }
                     },
                     "400": {
@@ -2859,6 +2859,9 @@
                         "type": "string"
                     }
                 },
+                "metrics": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetrics"
+                },
                 "probes": {
                     "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadProbes"
                 },
@@ -2900,6 +2903,9 @@
                         "type": "string"
                     }
                 },
+                "metrics": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetrics"
+                },
                 "probes": {
                     "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadProbes"
                 },
@@ -2913,6 +2919,33 @@
                     "type": "string"
                 }
             }
+        },
+        "github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetrics": {
+            "type": "object",
+            "properties": {
+                "enabled": {
+                    "type": "boolean"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "scrape_profile": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetricsScrapeProfile"
+                }
+            }
+        },
+        "github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetricsScrapeProfile": {
+            "type": "string",
+            "enum": [
+                "default",
+                "fast",
+                "slow"
+            ],
+            "x-enum-varnames": [
+                "WorkloadMetricsScrapeProfileDefault",
+                "WorkloadMetricsScrapeProfileFast",
+                "WorkloadMetricsScrapeProfileSlow"
+            ]
         },
         "github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadProbe": {
             "type": "object",
@@ -3056,6 +3089,36 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/internal_intent_transport_http.IntentDoc"
+                }
+            }
+        },
+        "http.ManifestListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_manifest_transport_http.ManifestDoc"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_platform_httpx.Pagination"
+                }
+            }
+        },
+        "http.ManifestResourcesResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/internal_manifest_transport_http.ManifestResourcesViewDoc"
+                }
+            }
+        },
+        "http.ManifestResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/internal_manifest_transport_http.ManifestDoc"
                 }
             }
         },
@@ -3427,6 +3490,9 @@
                         "type": "string"
                     }
                 },
+                "metrics": {
+                    "$ref": "#/definitions/http.ReleaseWorkloadMetricsDoc"
+                },
                 "probes": {
                     "$ref": "#/definitions/http.ReleaseWorkloadProbesDoc"
                 },
@@ -3605,6 +3671,20 @@
                 },
                 "step_name": {
                     "type": "string"
+                }
+            }
+        },
+        "http.ReleaseWorkloadMetricsDoc": {
+            "type": "object",
+            "properties": {
+                "enabled": {
+                    "type": "boolean"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "scrape_profile": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetricsScrapeProfile"
                 }
             }
         },
@@ -3946,20 +4026,6 @@
                 }
             }
         },
-        "internal_manifest_transport_http.ManifestListResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/internal_manifest_transport_http.ManifestDoc"
-                    }
-                },
-                "pagination": {
-                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_platform_httpx.Pagination"
-                }
-            }
-        },
         "internal_manifest_transport_http.ManifestRenderedResourceDoc": {
             "type": "object",
             "properties": {
@@ -3981,14 +4047,6 @@
                 }
             }
         },
-        "internal_manifest_transport_http.ManifestResourcesResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/internal_manifest_transport_http.ManifestResourcesViewDoc"
-                }
-            }
-        },
         "internal_manifest_transport_http.ManifestResourcesViewDoc": {
             "type": "object",
             "properties": {
@@ -4000,14 +4058,6 @@
                 },
                 "resources": {
                     "$ref": "#/definitions/internal_manifest_transport_http.ManifestGroupedResourcesDoc"
-                }
-            }
-        },
-        "internal_manifest_transport_http.ManifestResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/internal_manifest_transport_http.ManifestDoc"
                 }
             }
         },
@@ -4092,6 +4142,9 @@
                         "type": "string"
                     }
                 },
+                "metrics": {
+                    "$ref": "#/definitions/internal_manifest_transport_http.ManifestWorkloadMetricsDoc"
+                },
                 "probes": {
                     "$ref": "#/definitions/internal_manifest_transport_http.ManifestWorkloadProbesDoc"
                 },
@@ -4103,6 +4156,20 @@
                 },
                 "service_account_name": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_manifest_transport_http.ManifestWorkloadMetricsDoc": {
+            "type": "object",
+            "properties": {
+                "enabled": {
+                    "type": "boolean"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "scrape_profile": {
+                    "$ref": "#/definitions/github_com_bsonger_devflow-service_internal_workloadconfig_domain.WorkloadMetricsScrapeProfile"
                 }
             }
         },
