# internal/manifest/transport/http/swagger_types.go
@@ -63,15 +63,18 @@ type ManifestWorkloadProbeDoc = workloadconfigdomain.WorkloadProbe
 
 type ManifestWorkloadProbesDoc = workloadconfigdomain.WorkloadProbes
 
+type ManifestWorkloadMetricsDoc = workloadconfigdomain.WorkloadMetrics
+
 type ManifestWorkloadConfigDoc struct {
-	ID                 string                                `json:"id,omitempty"`
-	Replicas           int                                   `json:"replicas"`
-	ServiceAccountName string                                `json:"service_account_name,omitempty"`
+	ID                 string                                  `json:"id,omitempty"`
+	Replicas           int                                     `json:"replicas"`
+	ServiceAccountName string                                  `json:"service_account_name,omitempty"`
 	Resources          ManifestWorkloadResourceRequirementsDoc `json:"resources,omitempty"`
-	Probes             ManifestWorkloadProbesDoc             `json:"probes,omitempty"`
-	Env                []ManifestEnvVarDoc                   `json:"env,omitempty"`
-	Labels             map[string]string                     `json:"labels,omitempty"`
-	Annotations        map[string]string                     `json:"annotations,omitempty"`
+	Probes             ManifestWorkloadProbesDoc               `json:"probes,omitempty"`
+	Metrics            ManifestWorkloadMetricsDoc              `json:"metrics,omitempty"`
+	Env                []ManifestEnvVarDoc                     `json:"env,omitempty"`
+	Labels             map[string]string                       `json:"labels,omitempty"`
+	Annotations        map[string]string                       `json:"annotations,omitempty"`
 }
 
 type ManifestRenderedObjectDoc struct {
