# internal/release/domain/bundle_preview.go
@@ -79,13 +79,14 @@ type ReleaseFrozenServicePort struct {
 }
 
 type ReleaseFrozenWorkload struct {
-	Replicas           int                                          `json:"replicas"`
-	ServiceAccountName string                                       `json:"service_account_name,omitempty"`
+	Replicas           int                                               `json:"replicas"`
+	ServiceAccountName string                                            `json:"service_account_name,omitempty"`
 	Resources          workloadconfigdomain.WorkloadResourceRequirements `json:"resources,omitempty"`
-	Probes             workloadconfigdomain.WorkloadProbes          `json:"probes,omitempty"`
-	Env                []EnvVar                                     `json:"env,omitempty"`
-	Labels             map[string]string                            `json:"labels,omitempty"`
-	Annotations        map[string]string                            `json:"annotations,omitempty"`
+	Probes             workloadconfigdomain.WorkloadProbes               `json:"probes,omitempty"`
+	Metrics            workloadconfigdomain.WorkloadMetrics              `json:"metrics,omitempty"`
+	Env                []EnvVar                                          `json:"env,omitempty"`
+	Labels             map[string]string                                 `json:"labels,omitempty"`
+	Annotations        map[string]string                                 `json:"annotations,omitempty"`
 }
 
 type ReleaseRenderedBundleView struct {
